--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -267,7 +267,7 @@
                             <h4 id="cat-title-{{cat.id}}" >
                                 {{cat.heading}}
                             </h4>
-                            <p>
+                            <p class="cat-text">
                                 {{cat.desc}}
                             </p>
                             {% comment %} <div class='tag-list'>
