--- a/home/static/css/styles.css
+++ b/home/static/css/styles.css
@@ -692,6 +692,7 @@ header {
   opacity: 1;
   transform: scale(1);
 }
+
 .blogs-content{
   display: flex;
   flex-direction: column;
@@ -728,8 +729,10 @@ header {
 }
 
 .blogs .blog {
+  overflow:hidden;
   width: 95%;
   margin-top: 2rem;
+  height: 20rem;
   position: relative;
   background-color: var(--color-grey-5);
   border-radius: 5px;
@@ -1024,6 +1027,19 @@ header {
   justify-content: center;
   align-self: center;
 }
+.category > img{
+  height: 20rem;
+  width: 20rem;
+  border-radius: 2rem;
+  margin:auto;
+  margin-bottom: 2rem;
+  transition: transform 0.5s;
+}
+.category>img:hover{
+  filter: grayscale(180);
+  transform: scale(1.1);
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.8);
+}
 
 .leftbar>img {
   align-self: center;
@@ -1083,6 +1099,15 @@ header {
   margin-right: 1rem;
   
 }
+/* .cat-text{
+  width: 70%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  
+  
+  
+} */
 .personal-desc>p{
   /* background-color: var(--color-primary); */
   /* color: var(--color-white); */
@@ -1251,7 +1276,7 @@ header {
 
 
 @media screen and (max-width: 600px) {
-
+  
   header {
     padding: 0 !important;
   }
@@ -1399,6 +1424,7 @@ header {
   .main-title h2 .bg-text {
     font-size: 2.3rem;
   }
+ 
 
 }
 
@@ -1494,6 +1520,21 @@ header {
     margin-top: 4rem;
     margin-left: 2rem;
     margin-right: 2rem;
+  }
+  .blogs .blog {
+    overflow: scroll;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .blogs .blog img{
+    width: 60%;
+    margin: auto;
+    margin-top: 1rem;
+    border-radius: 0.5rem;
+  }
+  .blog-text h4{
+    text-align: center;
   }
 }
 
