--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -222,21 +222,23 @@
                 </div>
                 <div class="blogs" id="blog-ct">
                     {% for bg in blog %}
-                    <div class="blog">
-                        <img src="{{bg.image}}" alt={{bg.title}}>
+                    <div class="blog" >
+                        <img id="img-blog" src="{{bg.image}}" alt={{bg.title}}>
                         <div class="blog-text">
                             <a href="/blog/{{bg.title}}" target="_blank"><h4>
                                 {{bg.title}}
                             </h4></a>
-                            <p>
-                                {{bg.content | safe}}
-                            </p>
                             <p>{{bg.date}}</p>
                             <div class='tag-list'>
                                 {% for tag in bg.cat.all %}
                                 <a href="category/{{tag}}" target="_blank" class='blog-tag'>{{tag}}</a>
                                 {% endfor %}
                             </div>
+                            <p class="blog-par">
+                                {{bg.content | safe}}
+                            </p>
+                            
+                            
                         </div>
                         
                        
@@ -373,7 +375,7 @@
                                     <span class="btn-icon"><i class="fas fa-check"></i></span>
                                 </div> {% endcomment %}
                                 <div class="main-btn" id='submit-form'>
-                                <span class="btn-text"><input class='submit-form' type='submit' /><span>
+                                <div class="btn-text"><input class='submit-form' type='submit' /><div>
                                 </div>
                             </div>
                             
@@ -382,6 +384,69 @@
                 </div>
             </div>
         </section>
+        {% comment %} <section class="footer-section">Footer Example 4</section> {% endcomment %}
+        
+        <footer class="footer-distributed">
+
+			<div class="footer-left">
+
+				<h3>Juspreet's<span>Blog</span></h3>
+
+				<p class="footer-links">
+					<a href="#home" class="link-1">Home</a>
+					
+					<a href="#about">About</a>
+				
+					<a href="#portfolio">Portfolio</a>
+				
+					<a href="#blogs">Blogs</a>
+					
+					<a href="#tags">Categories</a>
+
+                    <a href="#contact">Contact Us</a>
+					
+				</p>
+
+				<p class="footer-company-name">© 2023 Juspreet's Blog. All Right Reserved</p>
+			</div>
+
+			<div class="footer-center">
+
+				<div>
+					<i class="fa fa-map-marker"></i>
+					<p>Bangalore,India</p>
+				</div>
+
+				<div>
+					<i class="fa fa-phone"></i>
+					<p>+91-{{personal.phone}}</p>
+				</div>
+
+				<div>
+					<i class="fa fa-envelope"></i>
+					<p><a href="mailto:{{personal.email}}">{{personal.email}}</a></p>
+				</div>
+
+			</div>
+
+			<div class="footer-right">
+
+				<p class="footer-company-about">
+					<span>About the Developer</span>
+					For developing similar website/applications you can contact me on options given below
+				</p>
+
+				<div class="footer-icons">
+
+					<a href="https://www.facebook.com/dhruvil.shah.5030" target="_blank"><i class="fa fa-facebook"></i></a>
+					<a href="https://www.linkedin.com/in/dhruvil-shah-444a92108/" target="_blank"><i class="fa fa-linkedin"></i></a>
+					<a href="https://github.com/dhruvil-shah" target="_blank"><i class="fa fa-github"></i></a>
+
+				</div>
+
+			</div>
+
+		</footer>
     </main>
 
     <div class="controls">
