--- a/home/templates/showmore.html
+++ b/home/templates/showmore.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{blogid.title}}</title>
+    <title>All Blogs</title>
     <link rel="shortcut icon" href="{% static '/images/favicon.ico' %}"/>
     <link rel="stylesheet" href="{% static 'css/styles.css'%}" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -42,30 +42,49 @@
             <div class="main-title">
                 <h2>All <span>Blogs</span></h2>
             </div>
-            <div class="blogs" id="blog-ct">
+            
+            <div class='search-category'>
+              <div >Search Tags : </div>
+                  <input type='text' id="query-category" placeholder="NLP,ML,Data..." onkeyup=searchTag() ></input>
+                  
+          </div>  
+            
+            
+            <div class="blogs" >
                 {% for bg in blogs %}
-                <div class="blog">
-                    <img src="{{bg.image}}" alt={{bg.title}}>
+                <div class="blog" id="blog-{{bg.id}}">
+                    <img id="img-blog" src="{{bg.image}}" alt={{bg.title}}>
                     <div class="blog-text">
                         <a href="/blog/{{bg.title}}" target="_blank"><h4>
                             {{bg.title}}
                         </h4></a>
-                        <p>
-                            {{bg.content | safe}}
-                        </p>
                         <p>{{bg.date}}</p>
                         <div class='tag-list'>
                             {% for tag in bg.cat.all %}
-                            <a href="category/{{tag}}" target="_blank" class='blog-tag'>{{tag}}</a>
+                            <a href="category/{{tag}}" target="_blank" class='blog-tag' id="tag-{{bg.id}}-{{tag}}">{{tag}}</a>
                             {% endfor %}
                         </div>
+                        <p>
+                            {{bg.content | safe}}
+                        </p>
+                        
                     </div>
                 </div>
                 {% endfor %}
             </div>
         </div>
+        <div class="theme-btn">
+          <i class="fas fa-adjust"></i>
+      </div>
+      <div class="theme-btn1">
+          <i class="fa-sharp fa-solid fa-arrow-left-long"></i>
+      </div>
     </section>
     <script src="{% static 'js/app.js'%}"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/29ea8845ba.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
