--- a/home/static/css/styles.css
+++ b/home/static/css/styles.css
@@ -766,8 +766,8 @@ header {
 }
 
 .blogs .blog img {
-  width: 30%;
-  object-fit: cover;
+  width: 20rem;
+  height: 100%;
   filter: grayscale(100%);
   transition: all 0.4s ease-in-out;
   
