updated juspreet in homepage to jaspreet

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -336,17 +336,14 @@
                         </div>
                         <div class="contact-icons">
                             <div class="contact-icon">
-                                <a href={{personal.facebook}} target="_blank">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a href={{personal.twitter}} target="_blank">
-                                    <i class="fab fa-twitter"></i>
+                                <a href={{personal.linkedin}} target="_blank">
+                                    <i class="fab fa-linkedin"></i>
                                 </a>
                                 <a href={{personal.github}} target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href={{personal.linkedin}} target="_blank">
-                                    <i class="fab fa-linkedin"></i>
+                                <a href={{personal.twitter}} target="_blank">
+                                    <i class="fab fa-twitter"></i>
                                 </a>
                                 <a href={{personal.youtube}} target="_blank">
                                     <i class="fab fa-youtube"></i>
@@ -390,7 +387,7 @@
 
 			<div class="footer-left">
 
-				<h3>Juspreet's<span>Blog</span></h3>
+				<h3>Jaspreet's<span>Blog</span></h3>
 
 				<p class="footer-links">
 					<a href="#home" class="link-1">Home</a>
@@ -407,7 +404,7 @@
 					
 				</p>
 
-				<p class="footer-company-name">© 2023 Juspreet's Blog. All Right Reserved</p>
+				<p class="footer-company-name">© 2023 JaspreetBlogs.in. All Right Reserved</p>
 			</div>
 
 			<div class="footer-center">
@@ -433,7 +430,7 @@
 
 				<p class="footer-company-about">
 					<span>About the Developer</span>
-					For developing similar website/applications you can contact me on options given below
+					For developing similar website/applications you can contact the developer on options given below
 				</p>
 
 				<div class="footer-icons">
