--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -387,7 +387,7 @@
 
 			<div class="footer-left">
 
-				<h3>Jaspreet's<span>Blog</span></h3>
+				<h3>Jaspreet<span>Blogs</span>.in</h3>
 
 				<p class="footer-links">
 					<a href="#home" class="link-1">Home</a>
