--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -245,7 +245,7 @@
                     </div>
                     {% endfor %}
                 </div>
-                <a href="/showBlogs" target="_blank"><button id="show-more">Show More</button></a>
+                <a href="/showBlogs/1" target="_blank"><button id="show-more">Show More</button></a>
             </div>
         </section>
         <section class="container" id="tags">
@@ -465,8 +465,6 @@
         <a href="#contact"><div class="control" data-id="contact">
             <i class="fas fa-envelope-open"></i>
         </div></a>
-       
-
     </div>
     <div class="theme-btn">
         <i class="fas fa-adjust"></i>
