--- a/home/templates/searchBlogs.html
+++ b/home/templates/searchBlogs.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>All Blogs</title>
+    <title>Searched Blogs</title>
     <link rel="shortcut icon" href="{% static '/images/favicon.ico' %}"/>
     <link rel="stylesheet" href="{% static 'css/styles.css'%}" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -40,24 +40,10 @@
     <section class="container" id="blogs">
         <div class="blogs-content">
             <div class="main-title">
-                <h2>All <span>Blogs</span></h2>
+                <h2>Searched <span>Blogs</span></h2>
             </div>
-            <div class="search-opt">
-            <div class='search-category'>
-                  <form method="get" action="/search">
-                    <button class="btn-title"><div>Search Title</div></button>
-                    <input type='text' id="query-title" name="query-title" placeholder="NLP based chatbot" >
-                  </input>
-                  
-                  </form>
-            </div>
-            <div class='search-category'>
-              <div >Search Tags : </div>
-                  <input type='text' id="query-category" placeholder="NLP,ML,Data..." onkeyup=searchTag() ></input>
-            </div>
-          </div>     
             <div class="blogs" >
-                {% for bg in blogData %}
+                {% for bg in searchBlog %}
                 <div class="blog" id="blog-{{bg.id}}">
                     <img id="img-blog" src="{{bg.image}}" alt={{bg.title}}>
                     <div class="blog-text">
@@ -73,36 +59,11 @@
                         <p>
                             {{bg.content | safe}}
                         </p>
-                        
                     </div>
                 </div>
                 {% endfor %}
             </div>
         </div>
-         <nav aria-label="Page navigation example">
-          <ul class="pagination justify-content-center">
-            {% if blogData.has_previous %}
-            <li class="page-item">
-              <a class="page-link" href="/showBlogs/{{blogData.previous_page_number}}" tabindex="-1">&lt;&lt;</a>
-            </li>
-            {% endif %}
-            {% for n in pageList %}
-            {% if n is currPage %}
-            <li class="page-item active-item"><a class="page-link" href="/showBlogs/{{n}}">{{n}}</a></li>
-            {% else %}
-            <li class="page-item"><a class="page-link" href="/showBlogs/{{n}}">{{n}}</a></li>
-            {% endif %}
-            
-            
-            {% endfor %}
-            {% if blogData.has_next %}
-            <li class="page-item">
-              <a class="page-link" href="/showBlogs/{{blogData.next_page_number}}">&gt;&gt;</a>
-            </li>
-            {% endif %}
-          </ul>
-        </nav> 
-        
         <div class="theme-btn">
           <i class="fas fa-adjust"></i>
       </div>
@@ -116,6 +77,6 @@
       src="https://kit.fontawesome.com/29ea8845ba.js"
       crossorigin="anonymous"
     ></script>
-    {% include "footer.html" %}
+    {% comment %} {% include "footer.html" %} {% endcomment %}
   </body>
 </html>
