--- a/home/templates/showmore.html
+++ b/home/templates/showmore.html
@@ -71,7 +71,8 @@
                             {% endfor %}
                         </div>
                         <p>
-                            {{bg.content | safe}}
+                            {% comment %} {{bg.content | safe}}{% endcomment %}
+                            {{bg.short_description}}
                         </p>
                         
                     </div>
