--- a/home/templates/searchBlogs.html
+++ b/home/templates/searchBlogs.html
@@ -57,7 +57,7 @@
                             {% endfor %}
                         </div>
                         <p>
-                            {{bg.content | safe}}
+                          {{bg.short_description}}
                         </p>
                     </div>
                 </div>
