updated all blog page placeholder

--- a/home/templates/showmore.html
+++ b/home/templates/showmore.html
@@ -35,7 +35,7 @@
         <div class="search-category">
               <form class="search-form" method="get" action="/search">
                 
-                <input type="text" id="query-title" name="query-title" placeholder="NLP based chatbot">
+                <input type="text" id="query-title" name="query-title" placeholder="Search Titles">
                 <!-- <button class="btn-title"><div>Search Title</div></button> -->
                 <button class="btn-title"><i class="fa fa-search" aria-hidden="true"></i></button>
               
@@ -44,7 +44,7 @@
         <div class="search-category">
           <form class="search-form" method="get" action="/search-category">
             
-            <input type="text" id="query-category" name="query-category" placeholder="NLP,ML,Data">
+            <input type="text" id="query-category" name="query-category" placeholder="Search Tags">
             <!-- <button class="btn-title"><div>Search Tag</div></button> -->
             <button class="btn-title"><i class="fa fa-search" aria-hidden="true"></i></button>
           
