--- a/home/templates/category.html
+++ b/home/templates/category.html
@@ -22,7 +22,7 @@
         {% endblock %}
         <div class='search'>
             <form>
-                <input type='text' id="query" placeholder="NLP,ML,Data"></input>
+                <input type='text' id="query" placeholder="Search Tags"></input>
                 <div id='search-btn'>{% if type == "all" %}<i class="fa-solid fa-magnifying-glass"></i>
                     {% else%}<i class="fa-solid fa-xmark"></i>{% endif %}</div>
             </form>
